created and added wordcloud picture

--- a/word_association_mining_exercise.ipynb
+++ b/word_association_mining_exercise.ipynb
@@ -4,7 +4,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "DSBA-6162<br>\n",
+    "University of North Carolina Charlotte<br>\n",
+    "DSBA-6162 Data Mining<br>\n",
+    "Instructor: Dr. Xi (Sunshine) Niu<br>\n",
+    "<br>\n",
     "Nathan Schaaf<br>\n",
     "3/18/2025"
    ]
